Fix hero herder layout on firefox

--- a/_sass/components/_cube.scss
+++ b/_sass/components/_cube.scss
@@ -16,8 +16,8 @@
   }
 
   @include mq(small) {
-    height: 14rem;
-    top: var(--space-100);
+    height: 13rem;
+    top: var(--space-200);
     left: 50%;
     scale: 80%;
     translate: -2rem -35%;
