--- a/_sass/layouts/_nav.scss
+++ b/_sass/layouts/_nav.scss
@@ -4,4 +4,10 @@
   @include container;
   display: flex;
   justify-content: space-between;
+
+  @include mq(small) {
+    .button {
+      padding: 0 var(--space-100);
+    }
+  }
 }
